--- a/assets/modules/egal/css/style.css
+++ b/assets/modules/egal/css/style.css
@@ -1,78 +1,149 @@
 @charset "UTF-8";
-/*
- * jQuery File Upload Plugin CSS Example 8.8.2
- * https://github.com/blueimp/jQuery-File-Upload
- *
- * Copyright 2013, Sebastian Tschan
- * https://blueimp.net
- *
- * Licensed under the MIT license:
- * http://www.opensource.org/licenses/MIT
- */
+@import url(http://webfonts.ru/import/fira.css);
+ * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; 
+  padding:0;
+  margin: 0;
+  position: relative;
+} 
 
-body {
-	background: url(../img/body.jpg);
-  /*padding-top: 60px;*/
+html { 
+  font-family: 'Fira Sans';
+  font-size: 14px;
+  min-width:500px;
+}
+.progress {width:100%;
+background: black;}
+
+.fileupload-processing {
+  background:aliceblue;
+}
+.details {
+/*   display:none; */
+}
+#fileupload > div.row.fileupload-buttonbar > div.col-lg-7 > input {
+  position:absolute;
+  top: 13%;
+  right: 2px;
+}
+.fileupload-buttonbar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  /* width: 80%; */
+  z-index: 9;
+}
+.col-lg-7 {
+  height:30px;
+}  
+button {
+  /* width: 19%; */
+  border: none;
+  padding: 0 10px;
+  margin: 4px 2px;
+  background: rgba(0, 150, 255, 0.5);
+  height: 30px;
+  box-sizing: border-box;
+
+  outline: none;
+  /* display: block; */
+  float: left;
+  cursor: pointer;
+  font-size: 14px;
+  border-radius: 5px;
+}
+ button {
+  
+}
+.fileupload-buttonbar button:hover {
+background: rgba(0, 150, 255, 1);
+color:white;
+}
+ol input, textarea {
+  font-family: 'Fira Sans';
+/*   line-height:14px; */
+    padding:0;
+  margin: 0 auto;
+  /* text-align: center; */
+  width: 100%;
+}
+ol button {
+  width: 60px;
+  
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  opacity: .2;
+  background: red;
+  color: white;
+}
+ol button:hover {
+  opacity:1;
+}
+ol .toggle {
+  position:absolute;
+  top: 0;
+  width: initial;
+  right: 0;
+}
+/* span.circle {
+  cursor: pointer;
+} */
+input[type="file"] {
+  position: absolute;
+  top:0;left:0;
+  
+  opacity: 0;
+  width: 100%;
+  height: 100%;
 }
 
-#dropzone {
-    background: palegreen;
-    width: 150px;
-    height: 50px;
-    line-height: 50px;
+#size {
+  position: fixed;
+  bottom:10px;
+  right:10px;
+  width:50%;
+  z-index:99;
+}
+  
+#settings input, 
+#settings textarea{
+    width: 77px;
+/*     line-height:16px; */
+    font-size: 14px;}
+    
+.panel {
+    display:block;
+    float:none;
+    width:100%;
+}
+ol, body {
+    padding:0;
+    margin:0 auto;
+}
+ol li {
+    float:left;
+    list-style: none;
+    width: 20%;
+    background: aliceblue;
+    cursor: pointer;
+    border: rgb(255, 255, 255) 2px solid;
+    /* margin: 0.2%; */
+    padding: 2px;
+    /* box-shadow: black 1px 1px 0px; */
+    /* border-radius: 13px; */
+}
+
+ol img {
+    width: 100%;
     text-align: center;
-    font-weight: bold;
+    margin: 0 auto;
 }
-#dropzone.in {
-    width: 600px;
-    height: 200px;
-    line-height: 200px;
-    font-size: larger;
+ol .preview canvas{
+  width:100%;
 }
-#dropzone.hover {
-    background: lawngreen;
+#sortable1 ol:last-child {
+    float: none;
 }
-#dropzone.fade {
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-    opacity: 1;
-}
-.placeholder1 {
-    margin-left: 0 !important;
-    background: #000;
-    width: 200px;
-    height: 200px;
-}
-/*.thumbnail {*/
-    /*-webkit-transition: all 0s ease-out !important;*/
-    /*-moz-transition: all 0s ease-out !important;*/
-    /*-ms-transition: all 0s ease-out !important;*/
-    /*-o-transition: all 0s ease-out !important;*/
-    /*transition: all 0s ease-out !important;*/
-/*}*/
-
-/*
-#sortable1 {
-    list-style-type: none;
-}
-#sortable1, .files { list-style-type: none; margin: 0; padding: 0; width: 450px; }
-#sortable1 li  { margin: 3px 3px 3px 0; padding: 1px; float: left; width: 100px; height: 90px; text-align: center; }*/
-
-.no-transition {
-    -webkit-transition: height 0.001s;
-    -moz-transition: height 0.001s;
-    -ms-transition: height 0.001s;
-    -o-transition: height 0.001s;
-    transition: height 0.001s;
-}
-.list-group-item1 {padding: 2px !important;}
-
-.files .delete{position: absolute; bottom:0;right:0;opacity: 0.3}
-.files .info{position: absolute; top:0;right:0;opacity: 0.3}
-.files button:hover{opacity: .8}
-/*.files :hover{opacity: .8}*/
-.thumbnail {height: 100px;overflow: hidden}
-#settings input {width:7em}
